// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render for expired episodes with audio skin 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

.c3 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c0 {
  position: relative;
  min-height: 165px;
  margin-bottom: 2rem;
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c2 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c3 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c3 {
    padding: 1rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <strong
          class="c3"
        >
          Dis thing no dey again
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`should correctly render for future episodes with video skin 1`] = `
.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

.c3 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c0 {
  margin: 2.5rem 0 1.5rem;
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c2 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c3 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c3 {
    padding: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    margin-top: 1rem;
  }
}

@media (max-width:37.4375rem) {
  .c0 {
    margin: 1rem -1rem 0;
  }
}

@media (max-width:24.9375rem) {
  .c0 {
    margin: 0.5rem -0.5rem 0;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <strong
          class="c3"
        >
          De thing wey de here never ready for you to play.
        </strong>
      </div>
    </div>
  </div>
</div>
`;
